Improve javadoc Add more testing